--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cryptowallet",
+  "name": "nodejs-user",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js"
@@ -20,10 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "lodash": "^4.17.21",
     "mongoose": "^6.8.0",
-    "redis": "^4.5.1",
-    "socket.io": "^4.5.4",
     "typescript": "^4.9.4",
     "uuid": "^9.0.0",
     "validator": "^13.7.0"
